--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <button id="increment-btn" onclick="increment()">+</button>
         <button id="save-btn" onclick="save()">SAVE</button>
         <p id="save-el"> Previous Entries: </p>
-    </div?
+    </div>
 <script src="index.js"></script>
 </body>
 </html>
